--- a/.html/css/style.production.css
+++ b/.html/css/style.production.css
@@ -101,11 +101,13 @@ button {
 }
 
 .page-footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
+    margin-bottom: 0px;
+    padding-top: 100px;
+    padding-bottom: 5px;
 }
 
 .profile { 
@@ -152,7 +154,8 @@ button {
 }
 
 .grid {
-	display: grid;
+    position: center;
+	display: relative;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 20px;
 	padding: 5px;
@@ -164,27 +167,25 @@ button {
 	color: var(--background-color);
 	position: relative;
 	grid-gap: 5px;
-	width: auto;
-	min-height: auto;
+	width: 300px;
+	height: 200px;
 	margin: 5px;
 	padding: 5px;
 	text-align: center;
 }
 
-.grid__item {
-	&:last-child {
+.grid__item:last-child {
 		background-color: var(--accent-color);
 		color: var(--background-color);
-		width: auto;
-		min-height: auto;
+		width: 300px;
+		height: 200px;
 		margin: 0;
 		padding: 5px;
 		text-align: center;
 		grid-column: 3 / 3;
-		grid-row: 1 / 3;
+		grid-row: 3 / 3;
 		margin: 5px;
 	}
-}
 
 @supports (display: grid) {
 	.grid { 
