--- a/.html/css/styles.css
+++ b/.html/css/styles.css
@@ -38,6 +38,7 @@ h1 {
 }
 
 h2 {
+
   font-size: 24px;
   font-weight: var(--secondary-weight);
   color: var(--text-color);
@@ -53,44 +54,42 @@ a {
   color: var(--link-color);
   text-decoration: none;
 }
+  a:hover {
+      text-decoration: none;
+      color: var(--text-color);
+  }
+  a:visited {
+      color: var(--secondary-color);
 
-a:hover {
-  text-decoration: none;
-  color: var(--text-color);
-}
+  }
+  a:active {
+      color: var(--link-color);
+  }
 
-a:visited {
-  color: var(--secondary-color);
-}
-
-a:active {
-  color: var(--link-color);
-}
 
 button {
-  border: none;
-  font-family: var(--primary-font), var(--secondary-font);
-  background-color: var(--accent-color);
-  color: var(--background-color);
-  text-decoration: none;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(1, 1, 1, 0.6);
-  transition: opacity 0.2s;
+border: none;
+font-family: var(--primary-font), var(--secondary-font);
+background-color: var(--accent-color);
+color: var(--background-color);
+text-decoration: none;
+padding: 10px;
+border-radius: 3px;
+border-bottom: 2px solid rgba(.6, .6, .6, 0.6);
+transition: opacity 0.2s;
 }
-
 button:hover {
   cursor: pointer;
   opacity: 0.8;
 }
-
 button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
 
+
 .button__secondary {
-  background-color: var(--accent-color);
+  background-color:  var(--accent-color);
   color: var(--background-color);
 }
 
@@ -101,15 +100,28 @@ button:focus {
   border-radius: 50%;
 }
 
+footer{
+  border-top: 1px solid color var(--accent-color);
+  text-align: center;
+  padding: 20px;
+}
+
 .page-footer {
-  position: fixed;
+  position: flex;
+  border-top: 1px solid color var(--accent-color);
+  background: var(--background-color);
+  text-align: center;
+  padding: 20px;
   left: 0;
   bottom: 0;
   width: 100%;
   text-align: center;
+  margin-bottom: 0px;
+  padding-top: 100px;
+  padding-bottom: 5px;
 }
 
-.profile {
+.profile { 
   max-width: 700px;
   margin: 0 auto;
 }
@@ -131,21 +143,21 @@ button:focus {
 .page-header_item {
   color: var(--primary-color);
   flex: 0 1 200px;
-}
-.page-header_item:last-child {
-  color: var(--primary-color);
-  flex-grow: 1;
-  text-align: right;
+  &:last-child {
+      color: var(--primary-color);
+      flex-grow: 1;
+      text-align: right;
+  }
 }
 
 .navigation-list {
   color: var(--background-color);
   list-style-type: none;
   margin-left: auto;
-}
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
+  li {
+      display: inline-block;
+      margin-left: 15px;
+  }
 }
 
 .navigation-list_item {
@@ -153,105 +165,110 @@ button:focus {
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-  padding: 5px;
-  margin: 5px;
+  position: center;
+display: relative;
+  place-items: center;
+grid-template-columns: 1fr 1fr 1fr;
+grid-gap: 20px;
+padding: 5px;
+margin: 5px;
+  vertical-align: center;
 }
 
 .grid_item {
-  background-color: var(--accent-color);
-  color: var(--background-color);
-  position: relative;
-  grid-gap: 5px;
-  width: auto;
-  min-height: auto;
-  margin: 5px;
-  padding: 5px;
-  text-align: center;
+background-color: var(--accent-color);
+color: var(--background-color);
+position: relative;
+grid-gap: 5px;
+width: 300px;
+height: 200px;
+margin: 5px;
+padding: 5px;
+text-align: center;
 }
 
 .grid__item:last-child {
   background-color: var(--accent-color);
   color: var(--background-color);
-  width: auto;
-  min-height: auto;
+  width: 300px;
+  height: 200px;
   margin: 0;
   padding: 5px;
   text-align: center;
-  grid-column: 3/3;
-  grid-row: 1/3;
+  grid-column: 3 / 3;
+  grid-row: 3 / 3;
   margin: 5px;
 }
 
 @supports (display: grid) {
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
-    margin: 5px;
-    padding: 5px;
+.grid { 
+      display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  margin: 5px;
+  padding: 5px;
   }
 }
+
 @media all and (max-width: 500px) {
-  .grid {
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-  }
-
-  h1 {
-    font-size: 22px;
-  }
+.grid {
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
 }
+h1 {
+  font-size: 22px;
+}
+}
+
 @media all and (min-width: 500px) and (max-width: 750px) {
-  .grid {
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-  }
+.grid {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+h1 {
+  font-size: 22px;
+}
+}
 
-  h1 {
-    font-size: 22px;
-  }
-}
 @keyframes bounce {
-  50% {
-    transform: translateY(0px);
-  }
-  100% {
-    transform: translateY(-10px);
-  }
+50% {
+  transform: translateY(0px);
 }
+100% {
+  transform: translateY(-10px);
+}
+}
+
 svg {
-  width: 500px;
-  height: 500px;
-  margin: 0 auto;
-  border: none;
-}
-svg * {
+width: 500px;
+height: 500px;
+margin: 0 auto;
+border: none;
+* {
   transform-box: fill-box;
+}
 }
 
 .hand_left {
-  animation: bounce 0.2s infinite;
+animation: bounce .2s infinite;
 }
 
 .standard-label {
-  display: grid;
-  grid-template-columns: 100px 400px;
-  grid-gap: 10px;
+display: grid;
+grid-template-columns: 100px 400px;
+grid-gap: 10px;
 }
 
 .skill {
-  font-family: var(--primary-font), var(--secondary-font); 
-  border-collapse: collapse;
-  width: 100%;
+ font-family: var(--primary-font), var(--secondary-font); 
+ border-collapse: collapse;
+ width: 100%;
 }
 
 .skill-td, 
 .skill-th {
-   border: 1px solid #ddd;
-   padding: 8px;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 .skill-tr:nth-child(even)
@@ -260,11 +277,11 @@ svg * {
 .skill-tr:hover {background-color: #ddd;}
 
 .skill-th {
-   padding-top: 12px;
-   padding-bottom: 12px;
-   text-align: left;
-   background-color: var(--text-color);
-   color: var(--background-color)
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--text-color);
+  color: var(--background-color)
 }
 
 /*
