--- a/simple-js-app/css/styles.css
+++ b/simple-js-app/css/styles.css
@@ -1,13 +1,46 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #ff0000;
+}
+
+.pokemon-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 400px;
+}
+
 .pokemon-button {
+    width: 100%;
     padding: 10px;
-    margin: 5px;
+    margin: 5px 0;
     border: none;
-    background-color: #3c5aa6;
-    color: #c7a008;
+    background-color: #3b4cca;
+    color: #ffde00;
     border-radius: 5px;
     cursor: pointer;
+    text-align: center;
 }
 
 .pokemon-button:hover {
     background-color: #2a75bb;
+}
+
+@media (max-wodth: 600px) {
+    .pokemon-list {
+        max-width:300px;
+    }
+    .pokemon-button {
+        padding: 8px;
+    }
 }
