--- a/simple-js-app/css/styles.css
+++ b/simple-js-app/css/styles.css
@@ -36,7 +36,7 @@ body {
     background-color: #2a75bb;
 }
 
-@media (max-wodth: 600px) {
+@media (max-width: 600px) {
     .pokemon-list {
         max-width:300px;
     }
