--- a/simple-js-app/css/styles.css
+++ b/simple-js-app/css/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 .pokemon-button:hover {
-    background-color: #2a75bb;
+    background-color: #4e5dcf;
 }
 
 @media (max-width: 600px) {
