--- a/simple-js-app/css/styles.css
+++ b/simple-js-app/css/styles.css
@@ -11,16 +11,15 @@ body {
 
 .pokemon-list {
   list-style-type: none;
-  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 10px;
+  padding: 10px;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
-  max-width: 400px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
   border-radius: 10px;
-  overflow: hidden;
 }
 
 .pokemon-button {
